[gd_scene load_steps=13 format=3 uid="uid://cfgpuqq10s21a"]

[ext_resource type="Script" path="res://main.gd" id="1_55uy6"]
[ext_resource type="Script" path="res://CharacterBody3D.gd" id="2_7asvo"]
[ext_resource type="Script" path="res://AIController3D.gd" id="3_4xhw4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pa3rj"]
emission_enabled = true
emission = Color(0.713726, 0.317647, 0.215686, 1)

[sub_resource type="BoxMesh" id="BoxMesh_lsed4"]
material = SubResource("StandardMaterial3D_pa3rj")

[sub_resource type="BoxShape3D" id="BoxShape3D_nt4fi"]

[sub_resource type="BoxMesh" id="BoxMesh_pcp60"]
size = Vector3(10, 1, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wts7s"]
data = PackedVector3Array(-5, 0.5, 5, 5, 0.5, 5, -5, -0.5, 5, 5, 0.5, 5, 5, -0.5, 5, -5, -0.5, 5, 5, 0.5, -5, -5, 0.5, -5, 5, -0.5, -5, -5, 0.5, -5, -5, -0.5, -5, 5, -0.5, -5, 5, 0.5, 5, 5, 0.5, -5, 5, -0.5, 5, 5, 0.5, -5, 5, -0.5, -5, 5, -0.5, 5, -5, 0.5, -5, -5, 0.5, 5, -5, -0.5, -5, -5, 0.5, 5, -5, -0.5, 5, -5, -0.5, -5, 5, 0.5, 5, -5, 0.5, 5, 5, 0.5, -5, -5, 0.5, 5, -5, 0.5, -5, 5, 0.5, -5, -5, -0.5, 5, 5, -0.5, 5, -5, -0.5, -5, 5, -0.5, 5, 5, -0.5, -5, -5, -0.5, -5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yxmwg"]
emission_enabled = true
emission = Color(0, 0.498039, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_c0l4p"]
material = SubResource("StandardMaterial3D_yxmwg")

[sub_resource type="BoxShape3D" id="BoxShape3D_suoi7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_i8nmx"]
size = Vector3(10, 1, 1)

[node name="main" type="Node3D"]
script = ExtResource("1_55uy6")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.16616, 1, 9.05073)
script = ExtResource("2_7asvo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
mesh = SubResource("BoxMesh_lsed4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("BoxShape3D_nt4fi")

[node name="AIController3D" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.58968, 0)
script = ExtResource("3_4xhw4")
reset_after = 10000

[node name="Timer" type="Timer" parent="CharacterBody3D"]
wait_time = 0.2
autostart = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.76394, -0.607131, 5.61771)
mesh = SubResource("BoxMesh_pcp60")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_wts7s")

[node name="target" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.36504, 0, 2.04827)

[node name="MeshInstance3D" type="MeshInstance3D" parent="target"]
mesh = SubResource("BoxMesh_c0l4p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="target"]
shape = SubResource("BoxShape3D_suoi7")

[node name="walls" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.76394, 0, 5.61771)

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.174652, 0, -5.50217)
shape = SubResource("BoxShape3D_i8nmx")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.155247, 0, 5.51128)
shape = SubResource("BoxShape3D_i8nmx")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.20143, 0, 0.0668373)
shape = SubResource("BoxShape3D_i8nmx")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5.54937, 0, 0.0668373)
shape = SubResource("BoxShape3D_i8nmx")

[connection signal="timeout" from="CharacterBody3D/Timer" to="CharacterBody3D" method="_on_timer_timeout"]
[connection signal="body_entered" from="target" to="CharacterBody3D" method="_on_target_body_entered"]
[connection signal="body_entered" from="walls" to="." method="_on_walls_body_entered"]
[connection signal="body_entered" from="walls" to="CharacterBody3D" method="_on_walls_body_entered"]
